--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-DB_DRIVER=pgx
+DB_DRIVER=mysql
 DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=password
 DB_NAME=sms_gateway
-DB_SSLMODE=disable
