--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
 services:
   db:
-    image: postgres:16-alpine
+    image: mariadb:11
     container_name: sms-gateway-db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: sms_gateway
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: sms_gateway
     ports:
-      - "5432:5432"
+      - "3306:3306"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mariadb_data:/var/lib/mysql
       - ./db-schema.sql:/docker-entrypoint-initdb.d/01-schema.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -23,13 +22,12 @@ services:
       dockerfile: Dockerfile
     container_name: sms-gateway-api
     environment:
-      DB_DRIVER: pgx
+      DB_DRIVER: mysql
       DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: postgres
+      DB_PORT: 3306
+      DB_USER: root
+      DB_PASSWORD: password
       DB_NAME: sms_gateway
-      DB_SSLMODE: disable
     ports:
       - "8080:8080"
     depends_on:
@@ -38,4 +36,4 @@ services:
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  mariadb_data:
